# ipu-emulator

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  404.html  BUILD.bazel  CLAUDE.md  CMakeLists.txt  CNAME  Dockerfile  MODULE.bazel  PLAN.md  README.md  REFACTORING_COMPLETED.md  REFACTORING_STEPS.md  SKILL.md  TASK.md  TESTING.md  TODO.md  WORKFLOW.md  WORKSPACE  asm_rules.bzl  hello_world.dis  index.html  run_conv.py  run_test.sh
docs/: BUILD.bazel  adding-instruction.md  assembly-syntax.md  building-applications.md  debugging.md  gen_codegen_wrapper.py  gen_docs_wrapper.py  gen_instruction_format_md_wrapper.py  index.md  macs.md  mkdocs.yml  mkdocs_wrapper.py  release-log.md  setup.md  update_release_log.py
docs/Module_spec/: Stage-aaq.md  cache-unit.md
docs/content/: adding-instruction.md  assembly-syntax.md  building-applications.md  debugging.md  index.md  instructions.md  ipu-configuration.md  operand-types.md  programmer-guide.md  release-log.md  setup.md  wide-vector-debug-mode.md
docs/content/specs/: ipu-host-registers.md  riscv-host-integration.md  stage-aaq.md  stage-control.md
docs/hardware-units/: _template.md  accum-unit.md  cache-unit.md  control-unit.md  mult-unit.md  overview.md  vector-unit.md
docs/hooks/: giscus_env.py  history_link.py
docs/overrides/: main.html
docs/overrides/partials/: giscus.html
docs/specs/: stage-aaq.md
src/apps/fully_connected/: BUILD.bazel  fully_connected.asm  fully_connected.c  test_fully_connected.sh
src/apps/fully_connected_ZD/: BUILD.bazel  README.md  fully_connected_ZD.asm  fully_connected_ZD.c  generate_test_data.py
src/apps/fully_connected_ZD/128x256/: BUILD.bazel  README.md  fully_connected_128x256.asm  fully_connected_128x256.c  generate_test_data.py  test_fully_connected_128x256.sh
src/apps/fully_connected_ZD/256x128/: BUILD.bazel  fully_connected_256x128.asm  fully_connected_256x128.c  generate_test_data.py  test_fully_connected_256x128.sh
src/apps/hello_world/: BUILD.bazel  hello_world.asm  hello_world.c
src/firmware/: BUILD.bazel  linker.ld
src/firmware/firmware/src/: main.rs
src/firmware/ipu-rt/src/: lib.rs
src/hw/ipu-ctrl-rtl/: BUILD.bazel
src/hw/ipu-ctrl-rtl/rtl/: README.md  ctrl_lr_lane.sv  ctrl_lr_regfile.sv  ctrl_lr_stage.sv  ctrl_pkg.sv  ctrl_stage.sv
src/tools/ipu-apps/: BUILD.bazel  MIGRATION_CHECKLIST.md  README.md  assemble_all.sh  bench_pointwise_universal.py  print_stats.py  print_stats_all.py  pyproject.toml
src/tools/ipu-apps/src/ipu_apps/: __init__.py  base.py  gen_pointwise_conv_asm.py
src/tools/ipu-apps/test/: test_attn_scores_km_256x36.py  test_attn_v_256x36.py  test_attn_v_bcast_36.py  test_conv2ch.py  test_conv2ch2ch.py  test_conv_128x128_1to8.py  test_conv_128x128_4to8.py  test_conv_128x128_8to16.py  test_conv_16x16_256to128.py  test_conv_16x16x128.py  test_conv_16x16x64.py  test_conv_32x32_192to96.py  test_conv_32x32x16.py  test_conv_32x32x64.py  test_conv_32x32x96.py  test_conv_64x64_8to16.py  test_conv_8x8.py  test_conv_8x8_160to160.py  test_conv_8x8_16to16.py  test_conv_8x8_64to64.py  test_conv_first_layer.py  test_conv_universal.py  test_conv_universal_bn_activation.py  test_conv_universal_bn_activation_pytorch.py  test_depthwise_8x8.py  test_depthwise_conv.py  test_depthwise_conv_128x128x64.py  test_depthwise_conv_128x128x8.py  test_depthwise_conv_64x64x1.py  test_depthwise_conv_64x64x256.py  test_depthwise_conv_8x8x160.py  test_depthwise_conv_stride2.py  test_depthwise_conv_stride2_small.py  test_depthwise_conv_universal.py  test_depthwise_conv_universal_bn_activation.py  test_fully_connected.py  test_host_fc_e2e.py  test_layernorm_128x16.py  test_layernorm_256x144.py  test_mambavision_stage3_depthwise_conv1d_silu.py  (+35 more)
src/tools/ipu-as/: CMakeLists.txt  parser.cpp  parser.h
src/tools/ipu-as-py/: .gitignore  BUILD.bazel  gen_instruction_fields_layout_svg.py  pyproject.toml  requirements.txt  test_svg_generation.py
src/tools/ipu-as-py/src/ipu_as/: asm_grammar.lark  cli.py  compound_inst.py  gen_codegen.py  gen_docs.py  immediate.py  inst.py  ipu_token.py  label.py  lark_tree.py  line.py  opcodes.py  print_inst_bytes.py  program.py  reg.py  template.py  utils.py
src/tools/ipu-as-py/test/: program_example.s  test_assemble.py  test_gen_codegen.py  test_ipu_token.py  test_program.py
src/tools/ipu-as/lib/encoder/: encoder.cpp  encoder.h
src/tools/ipu-as/lib/parser/: parser.cpp  parser.h
src/tools/ipu-as/lib/validator/: validator.cpp  validator.h
src/tools/ipu-as/src/: ipu-assembler.cpp
src/tools/ipu-as/test/: test_encoder.cpp  test_parser.cpp  test_validator.cpp
src/tools/ipu-common/: BUILD.bazel  README.md  pyproject.toml
src/tools/ipu-common/src/ipu_common/: __init__.py  acc_agg_enums.py  acc_stride_enums.py  activations.py  gen_union_layout_svg.py  incr_mod_pow2_k.py  instruction_spec.py  lr_inc_dec_imm.py  mult_mask_offset.py  registers.py  types.py  union_layout.py  union_layout_svg.py
src/tools/ipu-common/test/: test_union_layout.py  test_union_layout_svg.py
src/tools/ipu-ctrl-rdl/: BUILD.bazel  README.md  pyproject.toml
src/tools/ipu-ctrl-rdl/scripts/: export_codegen.py  peakrdl_html.py
src/tools/ipu-ctrl-rdl/scripts/templates/: ipu_ctrl_regs.py.j2  lib.rs.j2
src/tools/ipu-ctrl-rdl/src/ipu_ctrl_rdl/: __init__.py  codegen.py  model.py
src/tools/ipu-ctrl-rdl/test/: compile_riscv.sh  test_codegen.py
src/tools/ipu-emu-py/: AGG_ATTENTION_FINDINGS.md  BUILD.bazel  pyproject.toml  run_fc_debug.py
src/tools/ipu-emu-py/src/ipu_emu/: __init__.py  debug_cli.py  descriptors.py  emulator.py  engine.py  execute.py  host_ctrl.py  ipu.py  ipu_config.py  ipu_math.py  ipu_state.py  profiling_ipu.py  profiling_xmem.py  regfile.py  (+3 more)
src/tools/ipu-emu-py/test/: test_aaq_scale_path.py  test_agg_attention_verification.py  test_blt_sign_extend.py  test_debug_cli.py  test_debug_mode.py  test_emulator_e2e.py  test_engine.py  test_execute.py  test_host_ctrl.py  test_host_e2e.py  test_parity.py  test_racc_lane_behavior.py  test_regfile.py  test_riscv_host.py  test_stats.py  test_str_acc_reg_store.py  test_wide_vector_debug.py  test_xmem.py
(+447 files in other folders)
