# Root BUILD file

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "xmem",
    srcs = ["src/lib/xmem/xmem.c"],
    hdrs = ["src/lib/xmem/xmem.h"],
    includes = ["src/lib"],
)

cc_library(
    name = "logger",
    srcs = ["src/lib/logging/logger.c"],
    hdrs = ["src/lib/logging/logger.h"],
    includes = ["src/lib"],
)

cc_library(
    name = "ipu",
    srcs = ["src/lib/ipu/ipu.c"],
    hdrs = ["src/lib/ipu/ipu.h"],
    includes = ["src/lib"],
    deps = [
        ":logger",
        ":xmem",
        "//src/tools/ipu-as-py:inst_parser",
    ],
)

cc_library(
    name = "fp",
    srcs = ["src/lib/fp/fp.c"],
    hdrs = ["src/lib/fp/fp.h"],
    includes = ["src/lib"],
)

cc_library(
    name = "emulator",
    srcs = ["src/lib/emulator/emulator.c"],
    hdrs = ["src/lib/emulator/emulator.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu",
        ":logger",
        ":xmem",
    ],
)

cc_binary(
    name = "inst_parser_example",
    srcs = [
        "src/apps/inst_parser_example.c",
    ],
    deps = [
        "//src/tools/ipu-as-py:inst_parser",
    ],
)

cc_test(
    name = "xmem_tests",
    size = "small",
    srcs = ["test/test_xmem.cpp"],
    deps = [
        ":logger",
        ":xmem",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ipu_tests",
    size = "small",
    srcs = ["test/test_ipu.cpp"],
    deps = [
        ":ipu",
        ":logger",
        ":xmem",
        "@googletest//:gtest_main",
    ],
)
