# Root BUILD file

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "xmem",
    srcs = ["src/lib/xmem/xmem.c"],
    hdrs = ["src/lib/xmem/xmem.h"],
    includes = ["src/lib"],
)

cc_library(
    name = "logger",
    srcs = ["src/lib/logging/logger.c"],
    hdrs = ["src/lib/logging/logger.h"],
    includes = ["src/lib"],
)

cc_library(
    name = "ipu_base",
    srcs = ["src/lib/ipu/ipu_base.c"],
    hdrs = ["src/lib/ipu/ipu_base.h"],
    includes = ["src/lib"],
    deps = [
        ":xmem",
        "//src/tools/ipu-as-py:inst_parser",
    ],
)

cc_library(
    name = "ipu_regfile",
    srcs = ["src/lib/ipu/ipu_regfile.c"],
    hdrs = ["src/lib/ipu/ipu_regfile.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu_base",
        ":xmem",
    ],
)

cc_library(
    name = "ipu_xmem_inst",
    srcs = ["src/lib/ipu/ipu_xmem_inst.c"],
    hdrs = ["src/lib/ipu/ipu_xmem_inst.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu_base",
        ":ipu_regfile",
        ":xmem",
    ],
)

cc_library(
    name = "ipu_lr_inst",
    srcs = ["src/lib/ipu/ipu_lr_inst.c"],
    hdrs = ["src/lib/ipu/ipu_lr_inst.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu_base",
        ":ipu_regfile",
        ":logger",
    ],
)

cc_library(
    name = "ipu_mac_inst",
    srcs = ["src/lib/ipu/ipu_mac_inst.c"],
    hdrs = ["src/lib/ipu/ipu_mac_inst.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu_base",
        ":ipu_regfile",
        ":ipu_math",
        ":logger",
    ],
)

cc_library(
    name = "ipu_cond_inst",
    srcs = ["src/lib/ipu/ipu_cond_inst.c"],
    hdrs = ["src/lib/ipu/ipu_cond_inst.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu_base",
        ":logger",
    ],
)

cc_library(
    name = "ipu",
    srcs = ["src/lib/ipu/ipu.c"],
    hdrs = ["src/lib/ipu/ipu.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu_base",
        ":ipu_regfile",
        ":ipu_xmem_inst",
        ":ipu_lr_inst",
        ":ipu_mac_inst",
        ":ipu_cond_inst",
    ],
)

cc_library(
    name = "fp",
    srcs = ["src/lib/fp/fp.c"],
    hdrs = ["src/lib/fp/fp.h"],
    includes = ["src/lib"],
)

cc_library(
    name = "ipu_math",
    srcs = ["src/lib/ipu_math/ipu_math.c"],
    hdrs = ["src/lib/ipu_math/ipu_math.h"],
    includes = ["src/lib"],
    deps = [
        ":fp",
    ],
)

cc_library(
    name = "emulator",
    srcs = ["src/lib/emulator/emulator.c"],
    hdrs = ["src/lib/emulator/emulator.h"],
    includes = ["src/lib"],
    deps = [
        ":ipu",
        ":logger",
        ":xmem",
    ],
)

cc_binary(
    name = "inst_parser_example",
    srcs = [
        "src/apps/inst_parser_example.c",
    ],
    deps = [
        "//src/tools/ipu-as-py:inst_parser",
    ],
)

cc_test(
    name = "xmem_tests",
    size = "small",
    srcs = ["test/test_xmem.cpp"],
    deps = [
        ":logger",
        ":xmem",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ipu_tests",
    size = "small",
    srcs = ["test/test_ipu.cpp"],
    deps = [
        ":ipu",
        ":logger",
        ":xmem",
        "@googletest//:gtest_main",
    ],
)
