module(
    name = "ipu_emulator",
    version = "0.1.0",
)

# GoogleTest dependency
bazel_dep(name = "googletest", version = "1.15.2")

# Rules for C/C++
bazel_dep(name = "rules_cc", version = "0.1.1")

# Rules for Python
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)
use_repo(python, "python_3_10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "ipu_as_deps",
    python_version = "3.10",
    requirements_lock = "//src/tools/ipu-as-py:requirements.txt",
)
use_repo(pip, "ipu_as_deps")

# cxxopts - using http_archive since it's not in BCR
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cxxopts",
    urls = ["https://github.com/jarro2783/cxxopts/archive/refs/tags/v3.0.0.tar.gz"],
    strip_prefix = "cxxopts-3.0.0",
    sha256 = "36f41fa2a46b3c1466613b63f3fa73dc24d912bc90d667147f1e43215a8c6d00",
    build_file = "//third_party:cxxopts.BUILD",
)
