module(
    name = "ipu_emulator",
    version = "0.1.0",
)

# Rules for Python
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "1.1.1", repo_name = "rules_python_pytest")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)
use_repo(python, "python_3_10")

# Auto-generate requirements from pyproject.toml
generate_requirements = use_repo_rule("//:tools/python_deps.bzl", "generate_requirements")
parse_pyproject_deps = use_repo_rule("//:tools/pyproject_deps.bzl", "parse_pyproject_deps")

generate_requirements(
    name = "ipu_as_requirements",
    pyproject_tomls = [
        "//src/tools/ipu-as-py:pyproject.toml",
        "//src/tools/ipu-emu-py:pyproject.toml",
        "//src/tools/ipu-apps:pyproject.toml",
        "//src/tools/ipu-common:pyproject.toml",
    ],
)

parse_pyproject_deps(
    name = "ipu_as_pyproject",
    pyproject_toml = "//src/tools/ipu-as-py:pyproject.toml",
)

parse_pyproject_deps(
    name = "ipu_emu_pyproject",
    pyproject_toml = "//src/tools/ipu-emu-py:pyproject.toml",
)

parse_pyproject_deps(
    name = "ipu_apps_pyproject",
    pyproject_toml = "//src/tools/ipu-apps:pyproject.toml",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "ipu_as_deps",
    python_version = "3.10",
    requirements_lock = "@ipu_as_requirements//:requirements.txt",
)
use_repo(pip, "ipu_as_deps")
