module(
    name = "ipu_emulator",
    version = "0.1.0",
)

# Rules for Python
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "1.1.1", repo_name = "rules_python_pytest")
bazel_dep(name = "rules_shell", version = "0.4.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)
use_repo(python, "python_3_10")

# Regenerate tools/requirements.txt when pyproject.toml deps change:
#   uv pip compile src/tools/*/pyproject.toml --extra=docs --extra=dev \
#     --python-version=3.10 --generate-hashes -o tools/requirements.txt
parse_pyproject_deps = use_repo_rule("//:tools/pyproject_deps.bzl", "parse_pyproject_deps")

parse_pyproject_deps(
    name = "ipu_as_pyproject",
    pyproject_toml = "//src/tools/ipu-as-py:pyproject.toml",
)

parse_pyproject_deps(
    name = "ipu_emu_pyproject",
    pyproject_toml = "//src/tools/ipu-emu-py:pyproject.toml",
    exclude_deps = [
        "ipu-as-py",
        "ipu-common",
    ],
)

parse_pyproject_deps(
    name = "ipu_apps_pyproject",
    pyproject_toml = "//src/tools/ipu-apps:pyproject.toml",
    exclude_deps = [
        "ipu-as-py",
        "ipu-emu-py",
        "ipu-common",
    ],
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "ipu_as_deps",
    python_version = "3.10",
    requirements_lock = "//tools:requirements.txt",
)
use_repo(pip, "ipu_as_deps")
