load("@rules_python//python:defs.bzl", "py_binary")
load("@ipu_as_deps//:requirements.bzl", "requirement")

# All checked-in Markdown under docs/, preserving paths (e.g. specs/*.md).
filegroup(
    name = "doc_sources",
    srcs = glob(["**/*.md"]),
)

py_binary(
    name = "gen_docs",
    srcs = ["gen_docs_wrapper.py"],
    main = "gen_docs_wrapper.py",
    deps = ["//src/tools/ipu-as-py:ipu_as_lib"],
    python_version = "PY3",
)

genrule(
    name = "generate_instruction_docs",
    outs = ["instructions.md"],
    cmd = "$(location :gen_docs) $(@D)",
    tools = [":gen_docs"],
)

py_binary(
    name = "update_release_log",
    srcs = ["update_release_log.py"],
    main = "update_release_log.py",
    python_version = "PY3",
)

genrule(
    name = "generate_release_log",
    outs = ["release-log.md"],
    cmd = "$(location :update_release_log) --output $@",
    tags = ["no-sandbox"],
    tools = [":update_release_log"],
)

py_binary(
    name = "mkdocs",
    srcs = ["mkdocs_wrapper.py"],
    main = "mkdocs_wrapper.py",
    deps = [
        requirement("mkdocs"),
        requirement("mkdocs-material"),
    ],
    python_version = "PY3",
)

genrule(
    name = "build_docs",
    srcs = [
        "mkdocs.yml",
        ":doc_sources",
        ":generate_instruction_docs",
        ":generate_release_log",
    ],
    outs = ["site.tar"],
    tags = ["docs"],
    cmd = """
        # Create temp directory structure
        mkdir -p $(@D)/docs_temp/docs
        
        # Copy mkdocs config
        cp $(location mkdocs.yml) $(@D)/docs_temp/
        
        # Copy source markdown files, preserving subdirectories (nav paths may be nested).
        for src in $(locations :doc_sources); do
            case "$$src" in
                */docs/*) rel="$${src#*/docs/}" ;;
                docs/*) rel="$${src#docs/}" ;;
                *) rel="$$(basename "$$src")" ;;
            esac
            mkdir -p "$$(dirname "$(@D)/docs_temp/docs/$$rel")"
            cp "$$src" "$(@D)/docs_temp/docs/$$rel"
        done
        
        # Copy generated instruction docs
        cp $(location :generate_instruction_docs) $(@D)/docs_temp/docs/
        
        # Copy generated release log
        cp $(location :generate_release_log) $(@D)/docs_temp/docs/
        
        # Build with mkdocs
        ORIGDIR=$$PWD
        cd $(@D)/docs_temp
        $$ORIGDIR/$(location :mkdocs) build --site-dir $$ORIGDIR/$(@D)/site_output
        cd $$ORIGDIR
        
        # Package output
        tar -cf $@ -C $(@D)/site_output .
    """,
    tools = [":mkdocs"],
)
