load("@rules_python//python:defs.bzl", "py_binary")
load("@ipu_as_deps//:requirements.bzl", "requirement")

# All checked-in Markdown under docs/content/ (MkDocs docs_dir).
filegroup(
    name = "doc_sources",
    srcs = glob(["content/**/*.md"]),
)

py_binary(
    name = "gen_docs",
    srcs = ["gen_docs_wrapper.py"],
    main = "gen_docs_wrapper.py",
    deps = ["//src/tools/ipu-as-py:ipu_as_lib"],
    python_version = "PY3",
)

genrule(
    name = "generate_mkdocs_md",
    outs = [
        "instructions.md",
        "operand-types.md",
        "assembly-syntax.md",
    ],
    cmd = (
        "$(location :gen_docs) "
        "$(location instructions.md) $(location operand-types.md) $(location assembly-syntax.md)"
    ),
    tools = [":gen_docs"],
)

py_binary(
    name = "update_release_log",
    srcs = ["update_release_log.py"],
    main = "update_release_log.py",
    python_version = "PY3",
)

genrule(
    name = "generate_release_log",
    outs = ["release-log.md"],
    cmd = "$(location :update_release_log) --output $@",
    tags = ["no-sandbox"],
    tools = [":update_release_log"],
)

py_binary(
    name = "mkdocs",
    srcs = ["mkdocs_wrapper.py"],
    main = "mkdocs_wrapper.py",
    deps = [
        requirement("mkdocs"),
        requirement("mkdocs-material"),
        requirement("mkdocs-git-revision-date-localized-plugin"),
    ],
    python_version = "PY3",
)

genrule(
    name = "build_docs",
    srcs = [
        "mkdocs.yml",
        ":doc_sources",
        ":generate_mkdocs_md",
        ":generate_release_log",
        "hooks/giscus_env.py",
        "hooks/history_link.py",
        "overrides/main.html",
        "overrides/partials/giscus.html",
    ],
    outs = ["site.tar"],
    tags = ["docs", "no-sandbox"],
    cmd = """
        # Temp tree mirrors the repo: mkdocs.yml + hooks/ + overrides/ + content/ (MkDocs docs_dir).
        mkdir -p $(@D)/docs_temp/content
        mkdir -p $(@D)/docs_temp/hooks
        mkdir -p $(@D)/docs_temp/overrides/partials

        # Copy mkdocs config and theme overrides (symlinks would break hook imports)
        cp $(location mkdocs.yml) $(@D)/docs_temp/
        cp $(location hooks/giscus_env.py) $(@D)/docs_temp/hooks/giscus_env.py
        cp $(location hooks/history_link.py) $(@D)/docs_temp/hooks/history_link.py
        cp $(location overrides/main.html) $(@D)/docs_temp/overrides/main.html
        cp $(location overrides/partials/giscus.html) $(@D)/docs_temp/overrides/partials/giscus.html

        # Symlink Markdown sources into content/ so git-based plugins resolve real repo paths.
        ORIGDIR=$$PWD
        for src in $(locations :doc_sources); do
            case "$$src" in
                */docs/content/*) rel="$${src#*/docs/content/}" ;;
                docs/content/*) rel="$${src#docs/content/}" ;;
                *) rel="$$(basename "$$src")" ;;
            esac
            mkdir -p "$$(dirname "$(@D)/docs_temp/content/$$rel")"
            case "$$src" in
                /*) abssrc="$$src" ;;
                *) abssrc="$$ORIGDIR/$$src" ;;
            esac
            ln -sfn "$$abssrc" "$(@D)/docs_temp/content/$$rel"
        done

        # Generated pages (instructions, operand types, assembly syntax)
        for out in $(locations :generate_mkdocs_md); do \
          base=$$(basename "$$out"); \
          ln -sfn "$$ORIGDIR/$$out" "$(@D)/docs_temp/content/$$base"; \
        done

        ln -sfn "$$ORIGDIR/$(location :generate_release_log)" "$(@D)/docs_temp/content/release-log.md"

        # Build with mkdocs (execroot must retain .git; use no-sandbox on this genrule).
        cd $(@D)/docs_temp
        $$ORIGDIR/$(location :mkdocs) build --site-dir $$ORIGDIR/$(@D)/site_output
        cd $$ORIGDIR

        # Package output
        tar -cf $@ -C $(@D)/site_output .
    """,
    tools = [":mkdocs"],
)
