load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//:asm_rules.bzl", "assemble_asm")

cc_binary(
    name = "fully_connected",
    srcs = ["fully_connected.c"],
    deps = [
        "//:emulator",
        "//:ipu",
        "//:logger",
        "//:xmem",
    ],
)

assemble_asm(
    name = "assemble_fully_connected",
    src = "fully_connected.asm",
)

sh_test(
    name = "fully_connected_test",
    size = "medium",
    srcs = ["test_fully_connected.sh"],
    args = [
        "$(location :fully_connected)",
        "$(location :assemble_fully_connected.bin)",
        "$(location inputs_10x128_int8.bin)",
        "$(location weights_64x128_int8.bin)",
        "output_10x64_int32.bin",  # Just the filename, will be written to test outputs
    ],
    data = [
        "inputs_10x128_int8.bin",
        "output_10x64_int32.bin",
        "weights_64x128_int8.bin",
        ":assemble_fully_connected.bin",
        ":fully_connected",
    ],
)

sh_test(
    name = "fully_connected_test_fpu",
    size = "medium",
    srcs = ["test_fully_connected.sh"],
    args = [
        "$(location :fully_connected)",
        "$(location :assemble_fully_connected.bin)",
        "$(location test_data_format/fp8_e4m3/inputs_fp8_e4m3_deq_fp32.bin)",
        "$(location test_data_format/fp8_e4m3/weights_fp8_e4m3_deq_fp32.bin)",
        "output_fp8_e4m3_acc_fp32.bin",  # Just the filename, will be written to test outputs
    ],
    data = [
        "test_data_format/fp8_e4m3/inputs_fp8_e4m3_deq_fp32.bin",
        "test_data_format/fp8_e4m3/weights_fp8_e4m3_deq_fp32.bin",
        ":assemble_fully_connected.bin",
        ":fully_connected",
    ],
)
