load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//:asm_rules.bzl", "assemble_asm")

cc_binary(
    name = "fully_connected",
    srcs = ["fully_connected.c"],
    deps = [
        "//:emulator",
        "//:ipu",
        "//:logger",
        "//:xmem",
    ],
)

assemble_asm(
    name = "assemble_fully_connected",
    src = "fully_connected.asm",
)

sh_test(
    name = "fully_connected_test_int8",
    size = "medium",
    srcs = ["test_fully_connected.sh"],
    args = [
        "$(location :fully_connected)",
        "$(location :assemble_fully_connected.bin)",
        "$(location test_data_format/int8/inputs_int8.bin)",
        "$(location test_data_format/int8/weights_int8.bin)",
        "output_int8_acc_int32.bin",
        "INT8",
        "$(location test_data_format/int8/out_int8_acc_int32.bin)",
    ],
    data = [
        "test_data_format/int8/inputs_int8.bin",
        "test_data_format/int8/out_int8_acc_int32.bin",
        "test_data_format/int8/weights_int8.bin",
        ":assemble_fully_connected.bin",
        ":fully_connected",
    ],
)

sh_test(
    name = "fully_connected_test_fp8_e4m3",
    size = "medium",
    srcs = ["test_fully_connected.sh"],
    args = [
        "$(location :fully_connected)",
        "$(location :assemble_fully_connected.bin)",
        "$(location test_data_format/fp8_e4m3/inputs_fp8_e4m3.bin)",
        "$(location test_data_format/fp8_e4m3/weights_fp8_e4m3.bin)",
        "output_fp8_e4m3_acc_fp32.bin",
        "FP8_E4M3",
        "$(location test_data_format/fp8_e4m3/out_fp8_e4m3_acc_fp32.bin)",
    ],
    data = [
        "test_data_format/fp8_e4m3/inputs_fp8_e4m3.bin",
        "test_data_format/fp8_e4m3/out_fp8_e4m3_acc_fp32.bin",
        "test_data_format/fp8_e4m3/weights_fp8_e4m3.bin",
        ":assemble_fully_connected.bin",
        ":fully_connected",
    ],
)

sh_test(
    name = "fully_connected_test_fp8_e5m2",
    size = "medium",
    srcs = ["test_fully_connected.sh"],
    args = [
        "$(location :fully_connected)",
        "$(location :assemble_fully_connected.bin)",
        "$(location test_data_format/fp8_e5m2/inputs_fp8_e5m2.bin)",
        "$(location test_data_format/fp8_e5m2/weights_fp8_e5m2.bin)",
        "output_fp8_e5m2_acc_fp32.bin",
        "FP8_E5M2",
        "$(location test_data_format/fp8_e5m2/out_fp8_e5m2_acc_fp32.bin)",
    ],
    data = [
        "test_data_format/fp8_e5m2/inputs_fp8_e5m2.bin",
        "test_data_format/fp8_e5m2/out_fp8_e5m2_acc_fp32.bin",
        "test_data_format/fp8_e5m2/weights_fp8_e5m2.bin",
        ":assemble_fully_connected.bin",
        ":fully_connected",
    ],
)
