load("//:asm_rules.bzl", "assemble_asm")

exports_files([
    "fully_connected.asm",
])

filegroup(
    name = "test_data",
    srcs = glob(["test_data_format/**/*.bin"]),
    visibility = ["//visibility:public"],
)

assemble_asm(
    name = "assemble_fully_connected",
    src = "fully_connected.asm",
)
